--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
