--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "i18next": "^23.6.0",
-    "i18next-browser-languagedetector": "^7.1.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-i18next": "^13.3.1",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1"
   }
 }
