--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "i18next": "^23.6.0",
     "next": "14.0.1",
     "react": "^18",
@@ -16,6 +17,7 @@
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.3.2"
   }
 }
