--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.5",
     "i18next": "^23.6.0",
     "next": "14.0.1",
